--- a/src/index.css
+++ b/src/index.css
@@ -32,4 +32,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
-
+@font-face {
+  font-family: 'Varnan';
+  src: url('./assets/fonts/Varnan-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
